test/spec/func.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/func.wast
(;; STDOUT ;;;
out/third_party/testsuite/func.wast:317: assert_invalid passed:
  error: type mismatch in implicit return, expected i64 but got i32.
  000001d: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:321: assert_invalid passed:
  error: type mismatch in i32.eqz, expected i32 but got f32.
  000001c: error: OnConvertExpr callback failed
out/third_party/testsuite/func.wast:325: assert_invalid passed:
  error: type mismatch in f64.neg, expected f64 but got i64.
  000001e: error: OnUnaryExpr callback failed
out/third_party/testsuite/func.wast:333: assert_invalid passed:
  error: type mismatch in implicit return, expected i64 but got i32.
  000001c: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:337: assert_invalid passed:
  error: type mismatch in i32.eqz, expected i32 but got f32.
  000001b: error: OnConvertExpr callback failed
out/third_party/testsuite/func.wast:341: assert_invalid passed:
  error: type mismatch in f64.neg, expected f64 but got i64.
  000001c: error: OnUnaryExpr callback failed
out/third_party/testsuite/func.wast:349: assert_invalid passed:
  000000e: error: result count must be 0 or 1
out/third_party/testsuite/func.wast:353: assert_invalid passed:
  000000e: error: result count must be 0 or 1
out/third_party/testsuite/func.wast:362: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  0000019: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:366: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  0000019: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:370: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  0000019: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:374: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  0000019: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:379: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  000001a: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:385: assert_invalid passed:
  error: type stack at end of function is 1, expected 0
  000001a: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:391: assert_invalid passed:
  error: type mismatch in implicit return, expected i32 but got f32.
  000001e: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:398: assert_invalid passed:
  error: type stack size too small at return. got 0, expected at least 1
  0000019: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:404: assert_invalid passed:
  error: type stack size too small at return. got 0, expected at least 1
  000001a: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:410: assert_invalid passed:
  error: type mismatch in return, expected i32 but got i64.
  000001b: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:417: assert_invalid passed:
  error: type stack size too small at return. got 0, expected at least 1
  0000019: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:423: assert_invalid passed:
  error: type stack size too small at return. got 0, expected at least 1
  000001a: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:429: assert_invalid passed:
  error: type mismatch in return, expected i32 but got i64.
  000001b: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:435: assert_invalid passed:
  error: type mismatch in return, expected i32 but got i64.
  000001b: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:442: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  000001a: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:448: assert_invalid passed:
  error: type mismatch in br, expected i32 but got f32.
  000001f: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:454: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  000001a: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:460: assert_invalid passed:
  error: type mismatch in br, expected i32 but got i64.
  000001c: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:466: assert_invalid passed:
  error: type mismatch in br, expected i32 but got i64.
  000001c: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:473: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  000001c: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:479: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  000001d: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:485: assert_invalid passed:
  error: type mismatch in br, expected i32 but got i64.
  000001e: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:495: assert_malformed passed:
  out/third_party/testsuite/func/func.31.wast:1:14: error: syntax error, unexpected LOCAL
  (func (nop) (local i32))
               ^^^^^
out/third_party/testsuite/func.wast:499: assert_malformed passed:
  out/third_party/testsuite/func/func.32.wast:1:14: error: syntax error, unexpected PARAM
  (func (nop) (param i32))
               ^^^^^
out/third_party/testsuite/func.wast:503: assert_malformed passed:
  out/third_party/testsuite/func/func.33.wast:1:14: error: syntax error, unexpected RESULT
  (func (nop) (result i32))
               ^^^^^^
out/third_party/testsuite/func.wast:507: assert_malformed passed:
  out/third_party/testsuite/func/func.34.wast:1:20: error: syntax error, unexpected PARAM
  (func (local i32) (param i32))
                     ^^^^^
out/third_party/testsuite/func.wast:511: assert_malformed passed:
  out/third_party/testsuite/func/func.35.wast:1:20: error: syntax error, unexpected RESULT
  (func (local i32) (result i32) (get_local 0))
                     ^^^^^^
out/third_party/testsuite/func.wast:515: assert_malformed passed:
  out/third_party/testsuite/func/func.36.wast:1:21: error: syntax error, unexpected PARAM
  (func (result i32) (param i32) (get_local 0))
                      ^^^^^
102/102 tests passed.
;;; STDOUT ;;)
